# pyScienceMode

./: .gitignore  .readthedocs.yaml  Example_given_p24.py  LICENSE  README.md  environment.yml  example.py  motomed_example.py  motomed_stim_example.py  pyproject.toml  rehastimP24_example.py  rehastim_example.py  rehastimp24_example.py  sciencemode_cffi-1.0.0-cp310-cp310-win_amd64.whl  setup.py
Docs/: about.rst  conf.py  contributing.rst  example.rst  index.rst  install.md  modules.rst  pyScienceMode2.rst  rehastim2_example.md  rehastim_example.md
Examples/: handbike_rehastim2.py  handbike_rehastimp24.py  motomed_example.py  motomed_stim_example.py  p24_example.py  rehastim_example.py  setup.py
docs/: Main_differences.rst  about.rst  cite.md  conf.py  contributing.rst  examples.rst  index.html  index.rst  install.md  main_differences.rst  modules.rst  p24_example.md  paper.bib  paper.md  pyScienceMode.rst  rehastim2_example.md  rehastimP24_example.md  requirements.txt
examples/: motomed_example.py  motomed_stim_example.py  perf_test.py  rehastim2_example.py  rehastimp24_example.py
pyScienceMode/: __init__.py  acks.py  channel.py  logger.py  motomed_interface.py  rehastim2_interface.py  rehastimP24_interface.py  sciencemode.py  utils.py
pyScienceMode2/: Channel.py  Stimulator.py  __init__.py  acks.py  channel.py  enums.py  motomed_interface.py  rehastim2_interface.py  rehastimP24_interface.py  rehastim_interface.py  rehastimp24_interface.py  sciencemode.py  stimulation_point.py  utils.py
pysciencemode/: __init__.py  channel.py  enums.py  motomed_interface.py  p24_interface.py  sciencemode.py  (+2 more)
(+16 files in other folders)
