[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysciencemode"
version = "1.1.4"
description = "Python interface to control the Rehastim2 and P24 devices."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "S2M Lab", email = "kevin.co@umontreal.ca" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = ["numpy", "crccheck", "colorama", "pyserial"]

[tool.setuptools]
packages = ["pysciencemode"]

[project.urls]
"Homepage" = "https://github.com/s2mLab/pyScienceMode"
"Bug Tracker" = "https://github.com/s2mLab/pyScienceMode/issues"
